# use-case-3-sem-simulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  run_test.sh
examples/: CMakeLists.txt
examples/simulate_metersim/: README.md  simulate_metersim.c  simulate_metersim.py
examples/simulate_metersim/scenario/: config.toml  updates.csv
examples/simulate_mm_api/: README.md  simulate_mm_api.c  simulate_mm_api.py
examples/simulate_mm_api/scenario/: updates.csv
include/: mm_api.h
include/metersim/: metersim.h  metersim_types.h
python_api/: MANIFEST.in  prepare_venv.py  pyproject.toml  setup.py
python_api/phoenixsystems/sem/: device.py  metersim.py  mm_api.py  time.py  utils.py
python_api/test/: test_devices.py  test_metersim.py  test_mm_api.py  utils.py
src/metersim/: calculator.c  calculator.h  cfgparser.c  cfgparser.h  devicemgr.c  devicemgr.h  log.h  metersim.c  metersim_types_int.h  runner.c  runner.h  simulator.c  simulator.h  time_machine.c  time_machine.h
src/mm_api/: api_host.c
src/python_utils/: complex_py.c  complex_py.h  device_py.c
test/: CMakeLists.txt  test_calculator.c  test_cfgparser.c  test_devices.c  test_metersim.c  test_mm_api.c
test/input/: test_config.toml  test_update.csv
test/input/sc00/: config.toml  updates.csv
test/input/sc01/: config.toml  updates.csv
test/input/sc02/: updates.csv
